complete offline and online intregation

--- a/dev/offline_model.ipynb
+++ b/dev/offline_model.ipynb
@@ -28,11 +28,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 1,
       "metadata": {
         "id": "YUXbdZuh-frf"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "WARNING:tensorflow:From e:\\DADS\\DADS6005_Realtime_Analytics\\realtime-ml-kafka-crypto\\env\\lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "from tensorflow.keras.models import Sequential\n",
         "from tensorflow.keras.layers import Activation, Dense, Dropout\n",
@@ -52,21 +61,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 3,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'get_ticker'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mget_ticker\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m get_ccxt_data\n",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'get_ticker'"
+          ]
+        }
+      ],
       "source": [
         "from get_ticker import get_ccxt_data"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 283,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
         "df_eth_raw = get_ccxt_data('ETHUSDT', tf= '1m').set_index('timestamp')\n",
         "df_bnb_raw = get_ccxt_data('BNBUSDT', tf= '1m').set_index('timestamp')\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df_eth_raw.dtypes"
       ]
     },
     {
